# chimera

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  chimera.py  chimera_parcellation.py  conf.py  environment-mac.yaml  environment.yaml  parcTypes.json  parcTypes_orig.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml  python-package.yml
ANNOT_atlases/: annot_atlases.txt  tpl-fsaverage_hemi-R_den-164k_atlas-brainnetome_dseg.label.annot
GCS_atlases/: gcs_atlases.txt
chimera/: __init__.py  __main__.py  chimera.py  chimera_code_generator.py  cli.py  config_manager.py  parcellation.py  processing.py
chimera/config/: pipe_config.json  supraregions_dictionary.json
chimera/config/supraregions/: Amygdala.tsv  AuxiliaryLUTTable.tsv  Brainstem.tsv  Cerebellum.tsv  Hippocampus.tsv  Hypothalamus.tsv  Subcortical.tsv  Thalamus.tsv  WhiteMatter.tsv
chimera/data/: __init__.py
chimera/data/annot_atlases/: tpl-fsaverage_hemi-L_den-164k_atlas-HCPMM1_desc-curated_dseg.label.annot  tpl-fsaverage_hemi-R_den-164k_atlas-HCPMM1_desc-curated_dseg.label.annot
chimera/utils/: utils.py
config/: parcTypes_orig.json  pipe_config.json  supraregions_dictionary.json
config/supraregions/: Amygdala.tsv  AuxiliaryLUTTable.tsv  Brainstem.tsv  Cerebellum.tsv  Hippocampus.tsv  Hypothalamus.tsv  Subcortical.tsv  Thalamus.tsv  WhiteMatter.csv
data/annot_atlases/: tpl-fsaverage_hemi-L_den-164k_atlas-brainnetome_dseg.label.annot
data/vol_atlases/: .~lock.tpl-MNI152NLin2009cAsym_res-01_atlas-FSLCerebellumFnirt_probseg.tsv#  tpl-MNI152NLin2009cAsym_res-01_atlas-SUIT_probseg.tsv
docs/: Makefile  api.rst  chimera.config.rst  chimera.config.supraregions.rst  chimera.data.annot_atlases.rst  chimera.data.gcs_atlases.rst  chimera.data.rst  chimera.data.vol_atlases.rst  chimera.rst  conf.py  examples.rst  index.rst  installation.rst  make.bat  modules.rst  parcellations.rst  quickstart.rst  readme.rst  requirements.txt  tutorials.rst  usage.rst
tests/: __init__.py  test_chimera.py
thalamic_nuclei_MIALatlas/: Thalamic_Nuclei-ColorLUT.txt
